fix image stetch on safari

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -257,6 +257,7 @@ main {
     .image-slide {
       display: flex;
       justify-content: center;
+      align-items: flex-start;
       align-self: center;
       padding: 1rem;
 
